Further decrease the AEC3 look window in the nonlinear mode

This CL further decreases the look window size, as well
as the effect of the look window used by AEC3 when is is
in the nonlinear mode.

Bug: chromium:826720,webrtc:9083
Change-Id: I193539c0af74eea18d2821a3b7e1fae2f783d38a
Reviewed-on: https://webrtc-review.googlesource.com/65161
Commit-Queue: Per Åhgren <peah@webrtc.org>
Reviewed-by: Alessio Bazzica <alessiob@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#22659}